// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundImage renders 0 1`] = `
Array [
  .c0 {
  background-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders function 1`] = `
Array [
  .c0 {
  background-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders invalid theme path 1`] = `
Array [
  .c0 {
  background-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders negative number 1`] = `
Array [
  .c0 {
  background-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-image: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-image: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-image: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-image: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-image: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-image: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-image: July;
  }
}

@media April {
  .c0 {
    background-image: August;
  }
}

@media January {
  .c0 {
    background-image: September;
  }
}

@media April {
  .c0 {
    background-image: November;
  }
}

@media June {
  .c0 {
    background-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-image: July;
  }
}

@media April {
  .c0 {
    background-image: August;
  }
}

@media January {
  .c0 {
    background-image: September;
  }
}

@media April {
  .c0 {
    background-image: November;
  }
}

@media June {
  .c0 {
    background-image: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-image: January;
  }
}

@media April {
  .c0 {
    background-image: December;
  }
}

@media January {
  .c0 {
    background-image: April;
  }
}

@media April {
  .c0 {
    background-image: May;
  }
}

@media June {
  .c0 {
    background-image: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-image: January;
  }
}

@media April {
  .c0 {
    background-image: December;
  }
}

@media January {
  .c0 {
    background-image: April;
  }
}

@media April {
  .c0 {
    background-image: May;
  }
}

@media June {
  .c0 {
    background-image: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders postitive number 1`] = `
Array [
  .c0 {
  background-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders string 1`] = `
Array [
  .c0 {
  background-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundImage renders valid theme path 1`] = `
Array [
  .c0 {
  background-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-image: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
